--- a/docs/prova/p2.md
+++ b/docs/prova/p2.md
@@ -1,4 +1,4 @@
-# Questão 1 – Ao estudarmos o Caminho de Dados, módulos digitais básicos foram integrados para criar o núcleo de um sistema computacional, núcleo capaz de executar instruções lidas a partir da memória. Sobre o Caminho de Dados, responda:
+### Questão 1 – Ao estudarmos o Caminho de Dados, módulos digitais básicos foram integrados para criar o núcleo de um sistema computacional, núcleo capaz de executar instruções lidas a partir da memória. Sobre o Caminho de Dados, responda:
 
 
 ### a) Descreva o modelo uniciclo.
@@ -19,7 +19,7 @@ No modelo multiciclo, o máximo teórico é 5 ciclos por instrução. Na prátic
 
 ---
 
-# Questão 2 – Considerando sistemas computacionais, responda:
+### Questão 2 – Considerando sistemas computacionais, responda:
 
 ### a) O que é um barramento? Na sua resposta, indique também os conjuntos de linhas tipicamente encontrados em um barramento.
 
