--- a/docs/prova/p2.md
+++ b/docs/prova/p2.md
@@ -1,3 +1,5 @@
+RV32IMFDN
+
 ### Questão 1 – Ao estudarmos o Caminho de Dados, módulos digitais básicos foram integrados para criar o núcleo de um sistema computacional, núcleo capaz de executar instruções lidas a partir da memória. Sobre o Caminho de Dados, responda:
 
 
@@ -33,32 +35,43 @@ Uma exceção é um desvio anormal do fluxo normal de execução causado por um 
 
 Uma pequena quantidade de SRAM rápida, usada como cache, melhora o desempenho porque os programas tendem a reutilizar, muitas vezes, um conjunto pequeno de instruções e dados, e a acessar posições vizinhas na memória. Esses dados mais usados ficam na SRAM e são acessados em poucos ciclos, enquanto apenas uma parte menor dos acessos vai para a DRAM mais lenta. Como o desempenho efetivo depende do tempo médio de acesso (AMAT) — que combina tempo de acerto + taxa de faltas × penalidade da falta — ter uma cache SRAM pequena, porém com alta taxa de acertos, faz o tempo médio ficar próximo ao da SRAM, mesmo que o restante da hierarquia (DRAM, SSD, HDD) seja muito maior e mais lenta.
 
-### Questão 4: Considerando que as variáveis i, j e k são, respectivamente, manipuladas através dos registradores te, tl e t2, implemente os seguintes fragmentos de códigos de linguagem C na linguagem de montagem da arquitetura RISCV
+### Questão 4: Considerando que as variáveis i, j e k são, respectivamente, manipuladas através dos registradores t0, tl e t2, implemente os seguintes fragmentos de códigos de linguagem C na linguagem de montagem da arquitetura RISCV
 
-## a) `if (i < 87) j = j + 33; else j = j - k;`
-
-### Código em RISC-V (fragmento)
-
-```asm
-    # if (i < 87) j = j + 33; else j = j - k;
-    # i -> t0, j -> t1, k -> t2
-
-    li   t3, 87          # t3 = 87
-    bge  t0, t3, else_a  # se i >= 87, vai para o else
-
-    addi t1, t1, 33      # then: j = j + 33
-    j    end_a           # pula o else depois de executar o then
-
-else_a:
-    sub  t1, t1, t2      # else: j = j - k
-
-end_a:
-    # continuação do código...
-```
+Assuma:
+- `i` está em `t0`
+- `j` está em `t1`
+- `k` está em `t2`
 
 ---
 
-## b)
+### a) `if (i < 87) j = j + 33; else j = j - k;`
+
+Aqui o rótulo `fim_if` termina o programa com syscall 10.
+
+```asm
+    # i em t0, j em t1, k em t2
+
+    li      t3, 87          # t3 = 87 (constante para comparação)
+
+    bge     t0, t3, else_if # se i >= 87, desvia para o else
+
+    # if (i < 87) j = j + 33;
+    addi    t1, t1, 33      # j = j + 33
+    j       fim_if          # pula o bloco do else
+
+else_if:
+    # else j = j - k;
+    sub     t1, t1, t2      # j = j - k
+
+fim_if:
+    # encerra o programa
+    li      a7, 10          # código de serviço 10 = exit
+    ecall
+````
+
+---
+
+### b)
 
 ```c
 do {
@@ -68,27 +81,114 @@ do {
 } while (j <= 100);
 ```
 
-### Código em RISC-V (fragmento)
-
 ```asm
-    # do {
-    #     i = k + 29;
-    #     k = 2 * k;
-    #     j++;
-    # } while (j <= 100);
-    # i -> t0, j -> t1, k -> t2
+    # i em t0, j em t1, k em t2
 
-loop_b:
-    addi t0, t2, 29      # i = k + 29
-    slli t2, t2, 1       # k = 2 * k  (desloca 1 bit à esquerda)
-    addi t1, t1, 1       # j++
+loop_do_while:
+    # i = k + 29;
+    addi    t0, t2, 29      # t0 = t2 + 29  (i = k + 29)
 
-    li   t3, 100         # t3 = 100
-    ble  t1, t3, loop_b  # enquanto (j <= 100) repete o loop
+    # k = 2 * k;
+    slli    t2, t2, 1       # k = k << 1  => 2 * k
+
+    # j++;
+    addi    t1, t1, 1       # j = j + 1
+
+    # while (j <= 100);
+    li      t3, 100         # t3 = 100
+    ble     t1, t3, loop_do_while
+                            # se j <= 100, repete o laço
+
+fim_loop:
+    # encerra o programa
+    li      a7, 10          # código de serviço 10 = exit
+    ecall
 ```
 
+## Questão 6 – Conversor de Fahrenheit para Celsius em RISC-V RV32IMFDN
 
-### Questão 5: Analise o seguinte fragmento de código e calcule o valor em t2 ao alcançar o label Fim. Atenda ao comentário indicado no começo da seção de dados para sua análise: 
+Converter uma temperatura em Fahrenheit (F) para Celsius (C), usando a fórmula:
+
+\[
+C = (F - 32) \times \frac{5}{9}
+\]
+
+A seguir um programa em RISC-V (para o RARS) que:
+
+1. Lê um número em **Fahrenheit** (como `float`);
+2. Converte para **Celsius** usando ponto flutuante (RV32F);
+3. Imprime o resultado em Celsius;
+4. Encerra com syscall `10`.
+
+```asm
+    .data
+msg_f:      .string "Digite a temperatura em Fahrenheit: "
+msg_c:      .string "\nTemperatura em Celsius: "
+cte_32:     .float 32.0        # constante 32.0
+cte_5:      .float 5.0         # constante 5.0
+cte_9:      .float 9.0         # constante 9.0
+
+    .text
+    .globl main
+
+main:
+    ########################################
+    # Imprimir mensagem para ler Fahrenheit
+    ########################################
+    la   a0, msg_f         # a0 = endereço da string
+    li   a7, 4             # serviço 4 = print string
+    ecall
+
+    ########################################
+    # Ler valor em Fahrenheit (float)
+    ########################################
+    li   a7, 6             # serviço 6 = read float
+    ecall                  # valor lido vai para fa0 (Fahrenheit)
+
+    ########################################
+    # Cálculo: C = (F - 32.0) * 5.0 / 9.0
+    ########################################
+
+    # Carrega 32.0 em ft0
+    la   t0, cte_32
+    flw  ft0, 0(t0)        # ft0 = 32.0
+
+    # (F - 32.0) => fa1 = fa0 - ft0
+    fsub.s fa1, fa0, ft0   # fa1 = F - 32.0
+
+    # Carrega 5.0 em ft1
+    la   t0, cte_5
+    flw  ft1, 0(t0)        # ft1 = 5.0
+
+    # (F - 32.0) * 5.0 => fa1 = fa1 * ft1
+    fmul.s fa1, fa1, ft1   # fa1 = (F - 32.0) * 5.0
+
+    # Carrega 9.0 em ft2
+    la   t0, cte_9
+    flw  ft2, 0(t0)        # ft2 = 9.0
+
+    # ((F - 32.0) * 5.0) / 9.0 => fa0 = fa1 / ft2
+    fdiv.s fa0, fa1, ft2   # fa0 = (F - 32.0) * 5.0 / 9.0  (Celsius)
+
+    ########################################
+    # Imprimir resultado em Celsius
+    ########################################
+    la   a0, msg_c         # imprime mensagem "Temperatura em Celsius: "
+    li   a7, 4             # print string
+    ecall
+
+    # imprimir valor em fa0 (float)
+    li   a7, 2             # serviço 2 = print float
+    ecall
+
+
+    # Encerrar programa (exit com syscall 10)
+
+    li   a7, 10            # serviço 10 = exit
+    ecall
+```
+
+### Questão 7: Analise o seguinte fragmento de código e calcule o valor em t2 ao alcançar o label Fim. Atenda ao comentário indicado no começo da seção de dados para sua análise: 
 
 ```asm
 
