--- a/docs/prova/p2.md
+++ b/docs/prova/p2.md
@@ -188,7 +188,50 @@ main:
     ecall
 ```
 
-### Questão 7: Analise o seguinte fragmento de código e calcule o valor em t2 ao alcançar o label Fim. Atenda ao comentário indicado no começo da seção de dados para sua análise: 
+### Questão 7: Uma progressão aritmética (abreviadamente, PA) é uma sequência numérica em que cada termo, a partir do segundo, é igual à soma do termo anterior com uma constante r. O número r é chamado de razão ou diferença comum da progressão aritmética. De outra forma, an​=an−1​+r,n>11. Denominemos o primeiro termo da PA de ao- Implemente um procedimento em assembly riscv rv32imf que calcule a soma dos n primeiros termos de uma PA com primeiro termo igual a₀, e razão r. Assuma que do e r sejam valores inteiros.
+
+```asm
+# soma_pa
+# Calcula a soma dos n primeiros termos de uma PA:
+#   S_n = n * (2*a0 + (n-1)*r) / 2
+#
+# Entradas:
+#   a0 = a0  (primeiro termo)
+#   a1 = r   (razao)
+#   a2 = n   (numero de termos)
+# Saída:
+#   a0 = S_n (soma)
+
+soma_pa:
+    # t0 = a0, t1 = r, t2 = n
+    mv   t0, a0          # copia a0 para t0
+    mv   t1, a1          # copia r para t1
+    mv   t2, a2          # copia n para t2
+
+    # t3 = 2 * a0
+    slli t3, t0, 1       # t3 = a0 << 1  (2 * a0)
+
+    # t4 = (n - 1) * r
+    addi t4, t2, -1      # t4 = n - 1
+    mul  t4, t4, t1      # t4 = (n - 1) * r
+
+    # t3 = 2*a0 + (n-1)*r
+    add  t3, t3, t4      # t3 = t3 + t4
+
+    # t3 = n * [2*a0 + (n-1)*r]
+    mul  t3, t3, t2      # t3 = t3 * n
+
+    # divide por 2: S_n = t3 / 2
+    li   t5, 2
+    div  t3, t3, t5      # t3 = t3 / 2
+
+    # resultado na saída
+    mv   a0, t3
+    ret
+```
+
+
+### Questão 8: Analise o seguinte fragmento de código e calcule o valor em t2 ao alcançar o label Fim. Atenda ao comentário indicado no começo da seção de dados para sua análise: 
 
 ```asm
 
